# ag-compiler

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build-apple.sh  build-linux.sh  build-win.bat  rel-triple-arm64.cmake  rel-triple-x64.cmake  vcpkg.json
.github/workflows/: build_c.yml  release.yml  release_c.yml
src/: ast.cpp  ast.h  compiler.cpp  const-capture-pass.cpp  const-capture-pass.h  generator.cpp  generator.h  name-resolver.cpp  name-resolver.h  package-manager.cpp  package-manager.h  parser.cpp  parser.h  pruner.cpp  pruner.h  type-checker.cpp  type-checker.h
src/dom/: dom-test.cpp  dom-to-string-test.cpp  dom-to-string.cpp  dom-to-string.h  dom.cpp  dom.h
src/ltm/: ltm-test.cpp  ltm.cpp  ltm.h  ltm.natvis
src/utils/: CMakePresets.json  register_runtime.cpp  register_runtime.h  utf8.c  utf8.h  vcpkg-configuration.json  vcpkg.json  vmt_util-test.cpp  vmt_util.h
tests/: tests.ag
